@@ -12,7 +12,6 @@ perl:
   - "5.14"
   - "5.12"
   - "5.10"
-  - "5.8"
 env:
   global:
     - AUTHOR_TESTING=1
