@@ -6,7 +6,7 @@ copyright_year   = 2011
 
 [@Author::ETHER]
 Authority.authority = cpan:ALEXBIO
-Test::MinimumVersion.max_target_perl = 5.008003
+Test::MinimumVersion.max_target_perl = 5.010
 -remove = PodCoverageTests
 -remove = Test::PodSpelling
 -remove = Test::CleanNamespaces
